# bucky

./: .bandit  .bumpversion.cfg  .darglint  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  README.md  TERMS  bmodel  config.yml  dev_readme.md  environment.yml  environment_gpu.yml  get_US_data.sh  graph_info.md  noxfile.py  ocha_run.sh  pyproject.toml  tasks.py  tox.ini
.github/workflows/: black-flake8-isort-hooks.yml  codeql-analysis.yml  isort.yml  sphinx.yml  test-pre-commit-hooks.yml
bucky/: __init__.py  __main__.py  _typing.py  adjmat.py  arg_parser_model.py  config.py  exceptions.py  graph.py  make_input_graph.py  model.py  npi.py  numerical_libs.py  parameters.py  postprocess.py  postprocess_gpu.py  postprocess_old.py  state.py
bucky/base_config/: 00_data.cfg  00_data.yml  00_default.yml  00_historical_fitting.yml  00_monte_carlo_postprocessing.yml  00_system.yml
bucky/cli/: __init__.py  __main__.py  cfg.py  data.py  main.py  run.py  typer_utils.py  viz.py
bucky/data/: ILINet.csv  __init__.py  adm_mapping.py  clean_historical_data.py  timeseries.py
bucky/datasource_transforms/: __init__.py  bin_bridged_race_census_csv.py  convert_prem_excel.py  county_adjacency.py  csse_timeseries.py  extract_shapefile_data.py  hhs_death_flu_cleanup.py  hhs_hosp_cleanup.py  hhs_hosp_flu_cleanup.py  prem_2020_csv.py
bucky/included_data/: adm2_phased_age_dists.p  state_update.yml  us_adm1_abbrev_map.csv
bucky/model/: __init__.py  __main__.py  adjmat.py  arg_parser_model.py  data.py  derived_epi_params.py  estimation.py  exceptions.py  graph.py  io.py  main.py  mc_instance.py  npi.py  optimize.py  parameters.py  rhs.py  state.py  vacc.py
bucky/util/: __init__.py  age_interp.py  array_utils.py  async_thread.py  cached_prop.py  data_sync.py  detect_cupy.py  distributions.py  extrapolate.py  fractional_slice.py  get_historical_data.py  graph2histcsv.py  import_by_name.py  loess.py  nested_dict.py  ode_constraints.py  power_transforms.py  read_config.py  readable_col_names.py  rolling_mean.py  scoring.py  spline_smooth.py  update_data_repos.py  util.py  working_directory.py
bucky/viz/: __init__.py  geoid.py  get_historical_data.py  map.py  plot.py  readable_col_names.py  utils.py
docs/: cli.rst  conf.py  config.yml  getting_started.rst  graph_info.rst  index.rst  install.rst  model_flow.rst  model_tree.rst  nitpick-exceptions  npi.rst  refs.bib  requirements.txt  user_guide.rst  vis_tools.rst
docs/outdated_docs/: compartment_model.rst  usage.md
docs/source/: api.rst  autosummary.rst  bucky.rst  bucky.util.rst  bucky.viz.rst  cli.rst  conf.py  config.yml  faq.rst  getting_started.md  getting_started.rst  graph_info.md  graph_info.rst  index.rst  input_output.rst  install.md  install.rst  model_flow.rst  model_overview.rst  model_tree.rst  modules.rst  npi.rst  references.rst  refs.bib  usage.md  vis_tools.rst
docs/source/_static/: .gitignore
docs/source/autosummary/: bucky.arg_parser_model.rst  bucky.make_input_graph.rst  bucky.make_state_csv.rst  bucky.model.rst  bucky.npi.rst  bucky.numerical_libs.rst  bucky.parameters.rst  bucky.postprocess.rst  bucky.postprocess_NN.rst  bucky.rst  bucky.simulation_results.rst  bucky.tract_graph.rst  bucky.util.distributions.rst  bucky.util.get_historical_data.rst  bucky.util.graph2histcsv.rst  bucky.util.read_config.rst  bucky.util.readable_col_names.rst  bucky.util.rst  bucky.util.scoring.rst  bucky.util.update_data_repos.rst  bucky.util.util.rst  bucky.viz.geoid.rst  bucky.viz.map.rst  bucky.viz.plot.rst  bucky.viz.plot_NN.rst  bucky.viz.rst
docs/source/sphinxext/: github_link.py
docs/sphinxext/: github_link.py
included_data/: state_update.yml  statefips_to_names.csv
included_data/graphs/: AFG_graph_20201014.p  AFG_hist_20201014.csv
included_data/lookup_tables/: CONUS_county.lookup  CONUS_state.lookup  DMV.lookup
included_data/population/: territory_pop.csv
included_data/vaccine_hesitancy/: vaccine_hesitancy_all_cols.csv  vaccine_hesitancy_all_cols_se.csv
par/: 00_default.yml  01_opt.yml  10_vacc.yml  99_matt_cfg.yml  scenario_5.yml
tests/: __init__.py  conftest.py  test_bucky.py  test_config.py  test_integration.py
tests/cli/: test_main.py
tests/integration_config/: 00_historical_fitting.yml
