[tool.poetry]
name = "bucky-covid"
version = "1.0.0.alpha0"
description = "The Bucky model is a spatial SEIR model for simulating COVID-19 at the county level."
authors = ["Matt Kinsey <matt@mkinsey.com>"]

readme = "README.md"
homepage = "https://buckymodel.com"
repository = "https://github.com/mattkinsey/bucky"
keywords = ["bucky", "covid", "covid19", "model", "epi"] #TODO add more
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", 
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "bucky" },
]


[tool.poetry.scripts]
bucky = 'bucky.cli.main:main'


[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
geopandas = "^0.10.2"
joblib = "^1.1.0"
matplotlib = "^3.5.1"
networkx = "^2.6.3"
numpy = [
    { version = "^1.22.1", python=">=3.8" },
    { version = "1.21.5", python="<3.8" },
]
pandas = [
    { version = "1.3.*", python="<3.8,>=3.7.1" },
    { version = "^1.4.0", python=">=3.8" },
]
scipy = "^1.7.3"
tqdm = "^4.62.3"
typer = "^0.4.0"
us = "^2.0.2"
cupy = { version = "^10.4.0" } #optional = true }
optuna = { version = "^2.10.0" } #optional = true }
scikit-optimize = { version = "^0.9.0" } #optional = true }
loguru = "^0.6.0"
better-exceptions = "^0.3.3"
"ruamel.yaml" = "^0.17.20"
fastparquet = "^0.8.1"
PyQt5 = "^5.15.6"


#[tool.poetry.extras]
#gpu = ["cupy", "optuna", "scikit-optimize"]


[tool.poetry.dev-dependencies]
black = "^21.12b0"
bump2version = "^1.0.1"
coverage = "^6.3"
darglint = "^1.8.1"
flake8 = ">=3.8.0,<3.9.1"  # flakehell is broken for >=3.9.1 (2022-01-26)
flake8-annotations = "^2.7.0"
flake8-bandit = "^2.1.2"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.8.0"
flake8-logging-format = "^0.6.0"
flake8-print = "^4.0.0"
flake8-rst-docstrings = "^0.2.5"
flake8-simplify = "^0.15.1"
flakehell = "^0.9.0"
invoke = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
pydata-sphinx-theme = "^0.8.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
safety = "^1.10.3"
Sphinx = "^4.4.0"
sphinx-argparse = "^0.3.1"
sphinx-autoapi = "^1.8.4"
sphinx-copybutton = "^0.4.0"
sphinxcontrib-bibtex = "^2.4.1"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-tikz = "^0.4.15"
xdoctest = "^0.15.10"
pylint = "^2.12.2"
ipython = "^7.0.0"
interrogate = "^1.5.0"
bandit = "<=1.7.2"
pytest-steps = "^1.8.0"


[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
     \.git          # root of the project
    | data 
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
known_third_party = ["invoke", "nox"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.run]
branch = true
source = ["bucky"]

[tool.flakehell]
format = "grouped"
max_line_length = 120
show_source = true
docstring-convention = "numpy"

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.flakehell.exceptions."bucky/cli/"]
flake8-bugbear = ["-B008"]

[tool.flakehell.plugins]
pyflakes = ["+*, -D202"]
pycodestyle = ["+*, -W503"]
mccabe = ["+*"]
"flake8-*" = ["+*"]
darglint = ["+*"]
flake8-rst-docstrings = ["+*, -RST304"]
flake8-darglint = ["-*"]  #disable for now
flake8-annotations = ["-*"]  #disable for now
flake8-logging-format = ["+*, -G004"]
flake8-simplify = ["+*, -SIM106"]
#pylint = ["-*"] # TODO why is this a thing seperate from the plugin?

[tool.pylint.messages_control]
#disable = "C0330, C0326, C0103, E0602, W0511"

[tool.pylint.format]
max-line-length = "120"

[tool.interrogate]
verbose = 2
fail-under = 0
#generate-badge = "docs/_static" # this generates PER COMMIT badges

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
