[tool.poetry]
name = "bucky-covid"
version = "1.0.0.alpha0.post1"
description = "The Bucky model is a spatial SEIR model for simulating COVID-19 at the county level."
authors = ["Matt Kinsey <matt@mkinsey.com>"]

readme = "README.md"
homepage = "https://buckymodel.com"
repository = "https://github.com/mattkinsey/bucky"
keywords = ["bucky", "covid", "covid19", "model", "epi"] #TODO add more
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", 
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "bucky" },
]


[tool.poetry.scripts]
bucky = 'bucky.cli.main:main'


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
geopandas = "^0.10.2"
joblib = "^1.1.0"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
pandas = "^1.4.2"
scipy = "^1.8.1"
tqdm = "^4.64.0"
typer = "^0.4.1"
us = "^2.0.2"
cupy = "^10.5.0" #optional = true }
optuna = "^2.10.0" #optional = true }
scikit-optimize = "^0.9.0" #optional = true }
loguru = "^0.6.0"
better-exceptions = "^0.3.3"
"ruamel.yaml" = "^0.17.21"
fastparquet = "^0.8.1"
PyQt5 = "^5.15.6"


#[tool.poetry.extras]
#gpu = ["cupy", "optuna", "scikit-optimize"]


[tool.poetry.dev-dependencies]
black = "^22.3.0"
bump2version = "^1.0.1"
coverage = "^6.4.1"
darglint = "^1.8.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-logging-format = "^0.6.0"
flake8-print = "^5.0.0"
flake8-rst-docstrings = "^0.2.6"
flake8-simplify = "^0.19.2"
flakehell = "^0.9.0"
invoke = "^1.7.1"
isort = "^5.10.1"
mypy = "^0.960"
pre-commit = "^2.19.0"
pydata-sphinx-theme = "v0.9.0rc1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
safety = "^1.10.3"
Sphinx = "^5.0.1"
sphinx-argparse = "^0.3.1"
sphinx-autoapi = "^1.8.4"
sphinx-copybutton = "^0.5.0"
sphinxcontrib-bibtex = "^2.4.2"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-tikz = "^0.4.16"
xdoctest = "^1.0.0"
pylint = "^2.14.0"
ipython = "^8.4.0"
interrogate = "^1.5.0"
bandit = "^1.7.4"
pytest-steps = "^1.8.0"
flake8 = "3.9.0"
sphinx-click = "^4.1.0"


[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
     \.git          # root of the project
    | data 
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
known_third_party = ["invoke", "nox"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.run]
branch = true
source = ["bucky"]

[tool.flakehell]
format = "grouped"
max_line_length = 120
show_source = true
docstring-convention = "numpy"

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.flakehell.exceptions."bucky/cli/"]
flake8-bugbear = ["-B008"]

[tool.flakehell.plugins]
pyflakes = ["+*, -D202"]
pycodestyle = ["+*, -W503"]
mccabe = ["+*"]
"flake8-*" = ["+*"]
darglint = ["+*"]
flake8-rst-docstrings = ["+*, -RST304"]
flake8-darglint = ["-*"]  #disable for now
flake8-annotations = ["-*"]  #disable for now
flake8-logging-format = ["+*, -G004"]
flake8-simplify = ["+*, -SIM106"]
#pylint = ["-*"] # TODO why is this a thing seperate from the plugin?

[tool.pylint.messages_control]
#disable = "C0330, C0326, C0103, E0602, W0511"

[tool.pylint.format]
max-line-length = "120"

[tool.interrogate]
verbose = 2
fail-under = 0
#generate-badge = "docs/_static" # this generates PER COMMIT badges

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
